cf-template_V2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformation Template for Kittens Carousel Static Website on EC2. This template deploys Kittens Carousel Static website on Amazon Linux 2 EC2 Instance with custom security group allowing http connections on port 80. Kittens Carousel Static Website is downloaded from GitHub repository, then deployed on Apache Web Server
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type. Please select an instance type
    Default: t2.micro
    Type: String
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.medium
      - m1.large
      - m1.xlarge
      - m2.xlarge
      - m2.2xlarge
      - m2.4xlarge
      - m3.xlarge
      - m3.2xlarge
      - c1.medium
      - c1.xlarge
      - cc1.4xlarge
      - cc2.8xlarge
      - cg1.4xlarge  
Resources:
  WebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for terminal
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
       - Key: Name
         Value: !Sub Web Server of ${AWS::StackName} Stack
  WebServerHost:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-0c94855ba95c71c99
      InstanceType: !Ref InstanceType
      KeyName: yascoKp
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html/
            wget https://raw.githubusercontent.com/yasin-yasco/12_Static_Website_on_AWS_EC2_using_Cloudformation_with_ApacheWS/master/static-web/index.html
            wget https://raw.githubusercontent.com/yasin-yasco/12_Static_Website_on_AWS_EC2_using_Cloudformation_with_ApacheWS/master/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/yasin-yasco/12_Static_Website_on_AWS_EC2_using_Cloudformation_with_ApacheWS/master/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/yasin-yasco/12_Static_Website_on_AWS_EC2_using_Cloudformation_with_ApacheWS/master/static-web/cat2.jpg
            systemctl start httpd
            systemctl enable httpd

Outputs:
  YascoURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
